--- a/dhcpcd.conf
+++ b/dhcpcd.conf
@@ -8,10 +8,10 @@
 hostname
 
 # Use the hardware address of the interface for the Client ID.
-#clientid
+clientid
 # or
 # Use the same DUID + IAID as set in DHCPv6 for DHCPv4 ClientID as per RFC4361.
-duid
+#duid
 
 # Persist interface configuration when dhcpcd exits.
 persistent
